--- a/index.html
+++ b/index.html
@@ -5,60 +5,75 @@
 	<script type="text/javascript" src="//use.typekit.net/sig5wbe.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-	<title>The Shape of Design by Frank Chimero</title>
+	<title>La forma del dise&ntilde; por Frank Chimero - Traducción por Jaime Caballero</title>
 	<link rel="stylesheet" media="screen, projection" href="book.css" />
 </head>
 
 
 <body>
 	<header>
-		<h1>The Shape of Design by <a href="http://frankchimero.com">Frank Chimero</a></h1><br>
+		<h1>La forma del diseño por <a href="http://frankchimero.com">Frank Chimero</a></h1><br>
 		<a href="https://buyolympia.com/q/Item=frank-chimero-the-shape-of-design-paperback">Buy Paperback</a></h1>
 	</header>
 	
 	<nav>
 		<ol>
-			<li><a href="index.html" class="active tooltip">•<span>Foreword</span></a></li>
-		    <li class="sep"><a href="introduction.html" class="tooltip">◦<span>Introduction</span></a></li>
+			<li><a href="index.html" class="active tooltip">•<span>Prólogo</span></a></li>
+		    <li class="sep"><a href="introduction.html" class="tooltip">◦<span>Introducción</span></a></li>
 		
-		    <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;How&nbsp;and&nbsp;Why</span></a></li>
-		    <li><a href="chapter02.html" class="tooltip">◦<span>2&nbsp;&middot;&nbsp;Craft&nbsp;and&nbsp;Beauty</span></a></li>
-		    <li><a href="chapter03.html" class="tooltip">◦<span>3&nbsp;&middot;&nbsp;Limitations&nbsp;and&nbsp;Improvisation</span></a></li>
-		    <li class="sep"><a href="chapter04.html" class="tooltip">◦<span>4&nbsp;&middot;&nbsp;Form&nbsp;and&nbsp;Magic</span></a></li>
+		    <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;Cómo&nbsp;y&nbsp;Por qué</span></a></li>
+		    <li><a href="chapter02.html" class="tooltip">◦<span>2&nbsp;&middot;&nbsp;Artesanía&nbsp;y&nbsp;Belleza</span></a></li>
+		    <li><a href="chapter03.html" class="tooltip">◦<span>3&nbsp;&middot;&nbsp;Limitaciones&nbsp;e&nbsp;Improvisación</span></a></li>
+		    <li class="sep"><a href="chapter04.html" class="tooltip">◦<span>4&nbsp;&middot;&nbsp;Forma&nbsp;y&nbsp;Magia</span></a></li>
 
-		    <li><a href="chapter05.html" class="tooltip">◦<span>5&nbsp;&middot;&nbsp;Fiction&nbsp;and&nbsp;Bridges</span></a></li>
-		    <li class="sep"><a href="chapter06.html" class="tooltip">◦<span>6&nbsp;&middot;&nbsp;Context&nbsp;and&nbsp;Response</span></a></li>
+		    <li><a href="chapter05.html" class="tooltip">◦<span>5&nbsp;&middot;&nbsp;Ficción&nbsp;y&nbsp;Puentes</span></a></li>
+		    <li class="sep"><a href="chapter06.html" class="tooltip">◦<span>6&nbsp;&middot;&nbsp;Contexto&nbsp;and&nbsp;Respuesta</span></a></li>
 
-		    <li><a href="chapter07.html" class="tooltip">◦<span>7&nbsp;&middot;&nbsp;Stories&nbsp;and&nbsp;Voids</span></a></li>
-		    <li><a href="chapter08.html" class="tooltip">◦<span>8&nbsp;&middot;&nbsp;Frameworks&nbsp;and&nbsp;Etiquette</span></a></li>
+		    <li><a href="chapter07.html" class="tooltip">◦<span>7&nbsp;&middot;&nbsp;Historias&nbsp;y&nbsp;Vacíos</span></a></li>
+		    <li><a href="chapter08.html" class="tooltip">◦<span>8&nbsp;&middot;&nbsp;Marcos de trabajo&nbsp;y&nbsp;Etiquette</span></a></li>
 		    <li><a href="chapter09.html" class="tooltip">◦<span>9&nbsp;&middot;&nbsp;Delight&nbsp;and&nbsp;Accommodation</span></a></li>
 		    <li class="sep"><a href="chapter10.html" class="tooltip">◦<span>10&nbsp;&middot;&nbsp;Gifts&nbsp;and&nbsp;Giving</span></a></li>
 		
 		    <li><a href="endnotes.html" class="tooltip">◦<span>Endnotes</span></a></li>
-		    <li><a href="acknowledgements.html" class="tooltip">◦<span>Acknowledgements</span></a></li>
+		    <li><a href="acknowledgements.html" class="tooltip">◦<span>Reconocimientos</span></a></li>
 		</ol>
 	</nav>
 	
 	<article>
-		<h1><span>Foreword</span><br>
+		<h1><span>Prólogo</span><br>
 		Liz Danzico</h1>
-		 <p class="first">Frank Chimero and I came together over a shared commitment to jazz. But not only exchanges of music. We emulated the form. He would write a blog post. I would respond. I would improvise one of his hunches. He would iterate one of my posts. A call-and-response approach to a developing friendship.</p>
-	    <p>We wrote like this alongside one another without ever meeting or speaking directly &ndash; much like many of us: we never meet the people we admire from afar. We read their stories. We watch their videos. We inspect their work. We make up the in-between parts. We improvise. Frank’s stories became my stories, our stories. This book is, partly, about making things out of stories, and using them to help us live well.</p>
-	    <p>Without warning one day, a mail from Frank appeared in my inbox, introducing himself:</p>
-	    <blockquote>You know what I love about jazz and improvisation? It’s all process. <span class="osf">100%.</span> The essence of it is the process, every time is different, and to truly partake in it, you have to visit a place to see it in progress. Every jazz club or improv comedy theater is a temple to the process of production. It’s a factory, and the art is the assembly, not the product. Jazz is more verb than noun. And in a world riddled with a feeling of inertia, I want to find a verb and hold on to it for dear life.</blockquote>
-	    <p>My conversations with Frank began to draw a line between the adjacent systems in the world and our own design process. Jazz. Tools. Art. Pizza. Announce a noun, and Frank helps trace its mutable shape to something more active. A verb! The adjacent process.</p>
-	    <p>Deciphering and designing these systems is hard work. Done well, and one gets there “the long, hard, stupid way,” as Frank frames it in the pages to come, nodding to the gap between efficiency and the extra effort that compels us to make things with pride and compassion. Our process will vary, but steeling ourselves to persist is what Frank gives us the tools to do.</p>
-	    <p>In that way, this book is not unlike a more ubiquitous tool and platform, the U.S. Interstate Highway System. Today, we take it for granted, mostly, but its numbering system at one point had to be designed. At a time when telephone poles lined dirt trails, Bureau of Public Roads employee Edwin W. James and committee were asked to come up with a more expandable system as roads were growing in the <span class="osf">1920</span>s. They designed what we know today as the Interstate Numbering System. Prior to that, people relied on color codes for direction. Telephone poles ringed with color bands lined highways, corresponding to individual dirt trails across the country. As trails expanded, telephone poles became painted from the ground up, sometimes fifteen feet high, so trying to distinguish among colors became dangerous.</p>
-	    <p>E. W. James changed that. He decided that motorists would be able to figure out where they were at any time given the intersection of any two highways. North / south highways would be numbered with odd numbers; east / west with even numbers; and numbers would increase as you go east and north. The Interstate Numbering System was designed for expansion, anticipating the future contributions of people, cities, unexpectedness. It’s a tool. It’s a platform. And it’s still not done nearly <span class="osf">100</span> years later.</p>
-	    <p>If you wish to use this book as a tool, by all means, put it down at any time. Leave the road. You will find your way back as the intersection of two points will serve as your guide. Then wander back. This is the point of any road or system after all: to take you to a destination in a time in need. Or, consider the book as a platform and musical score: respond to a passage, to a chapter. Consider Frank’s call your opportunity to respond, and each sentence your opportunity to create. That is the reason they were written.</p>
+		 <p class="first">
+		 Frank Chimero y yo nos encontramos por un compromiso compartido con el jazz. Pero no sólo intercambiamos opiniones sobre música. Emulábamos la forma. Él escribía un post. Yo respondería. Yo improviaría una de sus corazonadas. Él comentaría uno de mis posts. Un tira y afloja que se desarrolló en amistad.</p>
+	    <p>
+	    Escribimos así uno con el otro sin habernos conocido o haber hablado directamente &ndash; como muchos de nosotros: nunca conocemos la gente que admiramos desde la distancia. Leemos sus historias. Vemos sus videos. Inspeccionamos su trabajo. Nos inventamos los espacios en blanco. Improvisamos. Las historias de Frank se volvieron las mías, nuestras historias. Este libro es, en parte, sobre crear cosas a partir de historias, y usarlas para ayudarnos a vivir bien.</p>
+	    <p>
+	    Sin aviso previo, un correo de Frank apareció en mi bandeja de entrada, presentándose:</p>
+	    <blockquote>
+	    ¿Sabes que me encanta del jazz y la improvisación? Es todo proceso. <span class="osf">100%.</span> Su esencia está en el proceso, cada vez distinto, y tú tomas parte en él, tienes que visitar un lugar para verlo en proceso. Toda sala de jazz o teatro de comedia improvisada es un templo al proceso de producción. Es una fábrica, y el arte está en el montaje, no en el producto. Jazz es más verbo que nombre. En un mundo enredado con un sentimiento de inercia, quiero encontrar un verbo y quedarme con él de por vida.</blockquote>
+	    <p>
+	    Mi conversación con Frank comenzó a dibujar una linea entre los sistemas adyacentes del mundo y nuestro propio proceso de diseño. Jazz. Herramientas. Arte. Pizza. Di un nombre, y Frank trazará su forma hasta llegar a algo más atractivo. ¡Un verbo! El proceso adyacente.</p>
+	    <p>
+	    Descifrar y diseñar estos sistemas es un duro trabajo. Bien hecho solo se consigue "tarde, difícil y a lo tonto" como Frank dirá en las siguientes páginas, confirmando la diferencia entre eficiencia y el esfuerzo extra que nos obliga a hacer cosas con orgullo y compasión. Nuestro proceso variará, pero las herramientas que nos da Frank para ello son constancia y persistencia.</p>
+	    <p>
+	    De ese modo, este libro no es diferente de una tarea y plataforma más ubicua, como el Sistema de Autopistas Interestatales de EEUU. Hoy, en mayoría, lo damos por sentado, pero su sistema de numeración tuvo que ser diseñado en algún momento. En el tiempo en que los postes telefónicos eran paralelos a carreteras de tierra, el empleado Edwin W. James y el comité de la Comisión de Carreteras Públicas fueron encargados con la creación de un sistema más escalable dado el crecimiento en el número de carreteras en <span class="osf">1920</span>.
+	    Ellos diseñaron lo que how conocemos como el Sistema de Numeración Interestatal. Antes de eso, la gente usaba códigos de colores como dirección. Postes telefónicos anillados con bandas de colores trazaban autopistas, correspondiendo a carreteras de tierra individuales en todo el país.
+	    Según aumentaban las carreteras, los postes se iban pintando, acabando pintados de arriba a abajo, a veces más de cuatro metros de altura, así que tratar de distinguir los colores se volvió algo peligroso.</p>
+	    <p>
+	    E. W. James cambió esto. Deicidió que los motoristas serían capaces de darse cuenta de dónde estaban en cualquier momento por la intersección de dos autopistas.
+	    Las autopistas norte/sur estarían numeradas con números impares; este/oeste con pares; y los números crecerían con la intersección de dos autopistas cualquiera, por lo que los números crecerían según vas al este o al norte.
+	    El Sistema de Numeración Interestatal fue diseñado para la expansión, anticipando las futuras contribuciones de gente, ciudades o cualquier cosa inesperada. Es una herramienta. Es una plataforma. Y ahora, <span class="osf">100</span> años más tarde, aún no está acabada.</p>
+	    <p>
+	    Si tu intención es usar este libro como una herramienta, siéntete libre de dejarlo en cualquier momento. Encontrarás tu camino de vuelta ya que la intersección entra dos puntos te servirá de guía. Una vez allí, da la vuelta. Después de todo, este es el objetivo de cualquier carretera o sistema: llevarte al destino cuando lo necesites. O también, condiera el libreo una plataforma y una crítica musical: responde a un pasaje, a un capítulo. Considera la llamada de Frank tu oportunidad para responder, y cada frase tu oportunidad para crear. Ese es el motivo por el que fueron escritas.</p>
 	    <p>I’m honored to say that since that original mail, there have been many Frank mails in my inbox. Later:</p>
-	    <blockquote>I see a platform and it tells me two things: first, other people’s contributions are important. Second, the world is not done. Wow. If I want to believe anything, it’s that.</blockquote>
-	    <p>Start improvising.</p>
-	    <a href="introduction.html" class="continue">Continue to Introduction</a>
+	    <blockquote>
+	    Veo una plataforma y me dice dos cosas: primero, las contribuciones de otra gente son importantes. Segundo, el mundo no está acabado. Wow. Si quieres creer en algo, es esto.</blockquote>
+	    <p>Empieza a improvisar.</p>
+	    <a href="introduction.html" class="continue">Continuar en Introducción</a>
 	</article>
 	
 	<footer>
-		Licensed  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">BY-NC-SA Creative Commons.</a><br>
-		Thanks to <a href="http://shapeofdesignbook.com/kickstarter/">the Kickstarter backers.</a>
+		Traducción por  <a href="http://jaicab.com">Jaime Caballero</a><br>
+		Licencia  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">BY-NC-SA Creative Commons.</a><br>
+		Gracias a <a href="http://shapeofdesignbook.com/kickstarter/">los donantes de Kickstarter.</a>
 	</footer>
 </body>
