--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<h1>La forma del diseño por <a href="http://frankchimero.com">Frank Chimero</a></h1><br>
-		<a href="https://buyolympia.com/q/Item=frank-chimero-the-shape-of-design-paperback">Buy Paperback</a></h1>
+		<a href="https://github.com/jaicab/the-shape-of-design-spanish">Ver en GitHub</a></h1>
 	</header>
 	
 	<nav>
@@ -21,16 +21,16 @@
 			<li><a href="index.html" class="active tooltip">•<span>Prólogo</span></a></li>
 		    <li class="sep"><a href="introduction.html" class="tooltip">◦<span>Introducción</span></a></li>
 		
-		    <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;Cómo&nbsp;y&nbsp;Por qué</span></a></li>
-		    <li><a href="chapter02.html" class="tooltip">◦<span>2&nbsp;&middot;&nbsp;Artesanía&nbsp;y&nbsp;Belleza</span></a></li>
-		    <li><a href="chapter03.html" class="tooltip">◦<span>3&nbsp;&middot;&nbsp;Limitaciones&nbsp;e&nbsp;Improvisación</span></a></li>
+		    <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;C&oacute;mo&nbsp;y&nbsp;Por&nbsp;qu&eacute;</span></a></li>
+		    <li><a href="chapter02.html" class="tooltip">◦<span>2&nbsp;&middot;&nbsp;Artesan&iacute;a&nbsp;y&nbsp;Belleza</span></a></li>
+		    <li><a href="chapter03.html" class="tooltip">◦<span>3&nbsp;&middot;&nbsp;Limitaciones&nbsp;e&nbsp;Improvisaci&oacute;n</span></a></li>
 		    <li class="sep"><a href="chapter04.html" class="tooltip">◦<span>4&nbsp;&middot;&nbsp;Forma&nbsp;y&nbsp;Magia</span></a></li>
 
-		    <li><a href="chapter05.html" class="tooltip">◦<span>5&nbsp;&middot;&nbsp;Ficción&nbsp;y&nbsp;Puentes</span></a></li>
-		    <li class="sep"><a href="chapter06.html" class="tooltip">◦<span>6&nbsp;&middot;&nbsp;Contexto&nbsp;and&nbsp;Respuesta</span></a></li>
+		    <li><a href="chapter05.html" class="tooltip">◦<span>5&nbsp;&middot;&nbsp;Ficci&oacute;n&nbsp;y&nbsp;Puentes</span></a></li>
+		    <li class="sep"><a href="chapter06.html" class="tooltip">◦<span>6&nbsp;&middot;&nbsp;Contexto&nbsp;y&nbsp;Respuesta</span></a></li>
 
-		    <li><a href="chapter07.html" class="tooltip">◦<span>7&nbsp;&middot;&nbsp;Historias&nbsp;y&nbsp;Vacíos</span></a></li>
-		    <li><a href="chapter08.html" class="tooltip">◦<span>8&nbsp;&middot;&nbsp;Marcos de trabajo&nbsp;y&nbsp;Etiquette</span></a></li>
+		    <li><a href="chapter07.html" class="tooltip">◦<span>7&nbsp;&middot;&nbsp;Historias&nbsp;y&nbsp;Vac&iacute;os</span></a></li>
+		    <li><a href="chapter08.html" class="tooltip">◦<span>8&nbsp;&middot;&nbsp;Marcos&nbsp;de&nbsp;trabajo&nbsp;y&nbsp;Etiquette</span></a></li>
 		    <li><a href="chapter09.html" class="tooltip">◦<span>9&nbsp;&middot;&nbsp;Delight&nbsp;and&nbsp;Accommodation</span></a></li>
 		    <li class="sep"><a href="chapter10.html" class="tooltip">◦<span>10&nbsp;&middot;&nbsp;Gifts&nbsp;and&nbsp;Giving</span></a></li>
 		
