--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 	    El Sistema de Numeración Interestatal fue diseñado para la expansión, anticipando las futuras contribuciones de gente, ciudades o cualquier cosa inesperada. Es una herramienta. Es una plataforma. Y ahora, <span class="osf">100</span> años más tarde, aún no está acabada.</p>
 	    <p>
 	    Si tu intención es usar este libro como una herramienta, siéntete libre de dejarlo en cualquier momento. Encontrarás tu camino de vuelta ya que la intersección entra dos puntos te servirá de guía. Una vez allí, da la vuelta. Después de todo, este es el objetivo de cualquier carretera o sistema: llevarte al destino cuando lo necesites. O también, condiera el libreo una plataforma y una crítica musical: responde a un pasaje, a un capítulo. Considera la llamada de Frank tu oportunidad para responder, y cada frase tu oportunidad para crear. Ese es el motivo por el que fueron escritas.</p>
-	    <p>I’m honored to say that since that original mail, there have been many Frank mails in my inbox. Later:</p>
+	    <p>
+	    Tengo el honor de decir que desde ese primer email, he recibido mucho correo de Frank. Luego:</p>
 	    <blockquote>
 	    Veo una plataforma y me dice dos cosas: primero, las contribuciones de otra gente son importantes. Segundo, el mundo no está acabado. Wow. Si quieres creer en algo, es esto.</blockquote>
 	    <p>Empieza a improvisar.</p>
