--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="//use.typekit.net/sig5wbe.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-	<title>La forma del dise&ntilde; por Frank Chimero - Traducción por Jaime Caballero</title>
+	<title>La forma del dise&ntilde; por Frank Chimero - Traducci&oacute;n por Jaime Caballero</title>
 	<link rel="stylesheet" media="screen, projection" href="book.css" />
 </head>
 
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<h1>La forma del diseño por <a href="http://frankchimero.com">Frank Chimero</a></h1><br>
-		<a href="https://github.com/jaicab/the-shape-of-design-spanish">Ver en GitHub</a></h1>
+		<a href="https://github.com/jaicab/the-shape-of-design-spanish">En GitHub</a></h1>
 	</header>
 	
 	<nav>
@@ -75,6 +75,6 @@
 	<footer>
 		Traducción por  <a href="http://jaicab.com">Jaime Caballero</a><br>
 		Licencia  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">BY-NC-SA Creative Commons.</a><br>
-		Gracias a <a href="http://shapeofdesignbook.com/kickstarter/">los donantes de Kickstarter.</a>
+		Gracias a <a href="http://shapeofdesignbook.com/kickstarter/">el apoyo en Kickstarter.</a>
 	</footer>
 </body>
