--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 	<article>
 		<h1><span>Prólogo</span><br>
 		Liz Danzico</h1>
-		 <p class="first">
-		 Frank Chimero y yo nos encontramos por un compromiso compartido con el jazz. Pero no sólo intercambiamos opiniones sobre música. Emulábamos la forma. Él escribía un post. Yo respondería. Yo improviaría una de sus corazonadas. Él comentaría uno de mis posts. Un tira y afloja que se desarrolló en amistad.</p>
+		<p class="first">
+		 Frank Chimero y yo nos encontramos por un compromiso compartido por el jazz. Pero no sólo intercambiamos opiniones sobre música. Emulábamos la forma. Él escribía un artículo. Yo respondería. Yo improviaría una de sus corazonadas. Él comentaría uno de mis artículos. Un tira y afloja que desarrollaba una amistad.</p>
 	    <p>
 	    Escribimos así uno con el otro sin habernos conocido o haber hablado directamente &ndash; como muchos de nosotros: nunca conocemos la gente que admiramos desde la distancia. Leemos sus historias. Vemos sus videos. Inspeccionamos su trabajo. Nos inventamos los espacios en blanco. Improvisamos. Las historias de Frank se volvieron las mías, nuestras historias. Este libro es, en parte, sobre crear cosas a partir de historias, y usarlas para ayudarnos a vivir bien.</p>
 	    <p>
-	    Sin aviso previo, un correo de Frank apareció en mi bandeja de entrada, presentándose:</p>
+	    Sin previo aviso, un correo de Frank apareció en mi bandeja de entrada, presentándose:</p>
 	    <blockquote>
 	    ¿Sabes que me encanta del jazz y la improvisación? Es todo proceso. <span class="osf">100%.</span> Su esencia está en el proceso, cada vez distinto, y tú tomas parte en él, tienes que visitar un lugar para verlo en proceso. Toda sala de jazz o teatro de comedia improvisada es un templo al proceso de producción. Es una fábrica, y el arte está en el montaje, no en el producto. Jazz es más verbo que nombre. En un mundo enredado con un sentimiento de inercia, quiero encontrar un verbo y quedarme con él de por vida.</blockquote>
 	    <p>
