--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="utf-8" />
 	<script type="text/javascript" src="//use.typekit.net/sig5wbe.js"></script>
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<h1>La forma del diseño por <a href="http://frankchimero.com">Frank Chimero</a></h1><br>
+		<h1>La forma del dise&ntilde;o por <a href="http://frankchimero.com">Frank Chimero</a></h1><br>
 		<a href="https://github.com/jaicab/the-shape-of-design-spanish">En GitHub</a></h1>
 	</header>
 	
