--- a/introduction.html
+++ b/introduction.html
@@ -1,62 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="utf-8" />
 	<script type="text/javascript" src="//use.typekit.net/sig5wbe.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-	<title>The Shape of Design by Frank Chimero</title>
+	<title>La forma del dise&ntilde; por Frank Chimero - Traducci&oacute;n por Jaime Caballero</title>
 	<link rel="stylesheet" media="screen, projection" href="book.css" />
 </head>
 
 
 <body>
-	
 	<header>
-		<h1>The Shape of Design by Frank Chimero</h1><br>
-		<a href="https://buyolympia.com/q/Item=frank-chimero-the-shape-of-design-paperback">Buy Paperback</a></h1>
+		<h1>La forma del dise&ntilde;o por <a href="http://frankchimero.com">Frank Chimero</a></h1><br>
+		<a href="https://github.com/jaicab/the-shape-of-design-spanish">En GitHub</a></h1>
 	</header>
-
+	
 	<nav>
 		<ol>
-			<li><a href="index.html" class="tooltip">◦<span>Foreword</span></a></li>
-		    <li class="sep"><a href="introduction.html" class="active tooltip">•<span>Introduction</span></a></li>
+			<li><a href="index.html" class="active tooltip">•<span>Prólogo</span></a></li>
+		    <li class="sep"><a href="introduction.html" class="tooltip">◦<span>Introducción</span></a></li>
 		
-		    <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;How&nbsp;and&nbsp;Why</span></a></li>
-		    <li><a href="chapter02.html" class="tooltip">◦<span>2&nbsp;&middot;&nbsp;Craft&nbsp;and&nbsp;Beauty</span></a></li>
-		    <li><a href="chapter03.html" class="tooltip">◦<span>3&nbsp;&middot;&nbsp;Limitations&nbsp;and&nbsp;Improvisation</span></a></li>
-		    <li class="sep"><a href="chapter04.html" class="tooltip">◦<span>4&nbsp;&middot;&nbsp;Form&nbsp;and&nbsp;Magic</span></a></li>
+		    <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;C&oacute;mo&nbsp;y&nbsp;Por&nbsp;qu&eacute;</span></a></li>
+		    <li><a href="chapter02.html" class="tooltip">◦<span>2&nbsp;&middot;&nbsp;Artesan&iacute;a&nbsp;y&nbsp;Belleza</span></a></li>
+		    <li><a href="chapter03.html" class="tooltip">◦<span>3&nbsp;&middot;&nbsp;Limitaciones&nbsp;e&nbsp;Improvisaci&oacute;n</span></a></li>
+		    <li class="sep"><a href="chapter04.html" class="tooltip">◦<span>4&nbsp;&middot;&nbsp;Forma&nbsp;y&nbsp;Magia</span></a></li>
 
-		    <li><a href="chapter05.html" class="tooltip">◦<span>5&nbsp;&middot;&nbsp;Fiction&nbsp;and&nbsp;Bridges</span></a></li>
-		    <li class="sep"><a href="chapter06.html" class="tooltip">◦<span>6&nbsp;&middot;&nbsp;Context&nbsp;and&nbsp;Response</span></a></li>
+		    <li><a href="chapter05.html" class="tooltip">◦<span>5&nbsp;&middot;&nbsp;Ficci&oacute;n&nbsp;y&nbsp;Puentes</span></a></li>
+		    <li class="sep"><a href="chapter06.html" class="tooltip">◦<span>6&nbsp;&middot;&nbsp;Contexto&nbsp;y&nbsp;Respuesta</span></a></li>
 
-		    <li><a href="chapter07.html" class="tooltip">◦<span>7&nbsp;&middot;&nbsp;Stories&nbsp;and&nbsp;Voids</span></a></li>
-		    <li><a href="chapter08.html" class="tooltip">◦<span>8&nbsp;&middot;&nbsp;Frameworks&nbsp;and&nbsp;Etiquette</span></a></li>
+		    <li><a href="chapter07.html" class="tooltip">◦<span>7&nbsp;&middot;&nbsp;Historias&nbsp;y&nbsp;Vac&iacute;os</span></a></li>
+		    <li><a href="chapter08.html" class="tooltip">◦<span>8&nbsp;&middot;&nbsp;Marcos&nbsp;de&nbsp;trabajo&nbsp;y&nbsp;Etiquette</span></a></li>
 		    <li><a href="chapter09.html" class="tooltip">◦<span>9&nbsp;&middot;&nbsp;Delight&nbsp;and&nbsp;Accommodation</span></a></li>
 		    <li class="sep"><a href="chapter10.html" class="tooltip">◦<span>10&nbsp;&middot;&nbsp;Gifts&nbsp;and&nbsp;Giving</span></a></li>
 		
 		    <li><a href="endnotes.html" class="tooltip">◦<span>Endnotes</span></a></li>
-		    <li><a href="acknowledgements.html" class="tooltip">◦<span>Acknowledgements</span></a></li>
+		    <li><a href="acknowledgements.html" class="tooltip">◦<span>Reconocimientos</span></a></li>
 		</ol>
 	</nav>
 	
 	<article>
-		<h1>Introduction</h1>
-	    <p class="first">What is the marker of good design? It moves. The story of a successful piece of design begins with the movement of its maker while it is being made, and amplifies by its publishing, moving the work out and around. It then continues in the feeling the work stirs in the audience when they see, use, or contribute to the work, and intensifies as the audience passes it on to others. Design gains value as it moves from hand to hand; context to context; need to need. If all of this movement harmonizes, the work gains a life of its own, and turns into a shared experience that enhances life and inches the world closer to its full potential.</p>
-	    <p>The designer is tasked to loosely organize and arrange this movement. She is the one who works to ensure this motion is pointed in a direction that leads us toward a desirable future. Marshall McLuhan said that, “we look at the present through a rear-view mirror,” and we “march backwards into the future.” Invention becomes our lens to imagine what is possible, and design is the road we follow to reach it. But, there is a snag in McLuhan’s view, because marching is no way to go into the future. It is too methodical and restricted. The world often subverts our best laid plans, so our road calls for a way to move that is messier, bolder, more responsive. The lightness and joy afforded by creating suggests that we instead dance.</p>
-	    <p>Dancing requires music, and we each have our own song. These songs are the culmination of our individual dispositions. It is a product of our lines of inquiry about the work that we do, and a demonstration of the lens we use to see the world. The first portion of this book concerns itself with these inner movements. We each carry our own tune, and if we listen to ourselves, the song that emerges is composed of the questions that we ask while working, the methods we choose to employ in our practice, and the bias we show by favoring certain responses over others. Each song is the origin of the individual’s creativity; it is a personal tune that compels us to make things, and feel obligated to do so in a way specific to ourselves.</p>
-	    <p>The second part of the book looks at the milieu of design: the cultural context of the work we create, the parties involved in its making, those groups’ relationships to one another, and the expected outcomes of the designer’s efforts. Design has a tendency to live between things to connect them, so this is analyzed in more detail to find patterns. It looks to weigh the value of fiction, the mutability of artifacts, and the multiplicity of responses available in design. The purpose of all of these assessments is to look at the space around design to identify the moving parts, so one can begin to strategize how to make this movement sway together and respond accordingly as things change.</p>
-	    <p>The last part of the book focuses on the primacy of the audience in design. It assesses methods to create more meaningful connections with them to unlock the great opportunity of this fortuitous arrangement. What can be done if we speak truly and honestly to the audience of our work? Perhaps this changes the success metrics of design to more soft, meaningful qualities, like enthusiasm, engagement, and resonance. Reframing the practice as something more than commerce and problem-solving lets us focus on fundamental issues about utility. It requires us to raise simple, difficult questions about our work, such as, “Does this help us to live well?”</p>
-	    <p><em>The Shape of Design</em> is a map of the road where we dance rather than a blueprint of it. It strives to investigate the opportunities of exploring the terrain, and it values stepping back from the everyday concerns of designing. It attempts to impose a meaningful distance in order to find patterns in the work and assess the practice as a whole. One can observe, from this distance, two very fundamental things about design that are easy to miss in the midst of all of this movement.</p>
-	    <p>First, design is imagining a future and working toward it with intelligence and cleverness. We use design to close the gap between the situation we have and the one we desire. Second, design is a practice built upon making things for other people. We are all on the road together. These two things dictate our relationship to the world and our bond to one another. They form the foundations of the design practice, so our work should revolve around these truths.</p>
-	    <p>The practice, simply, is a way of thinking and moving that we use to enhance life. It is available to anyone. We listen to our song, watch how things move, imagine the arrangement, then act. We dance together backwards into the future, giving influence and taking it, forming and being formed. This is dance of eternity, and the shape of design. I hope to see you singing on the road.</p>
+		<h1>Introducci&oacute;n</h1>
+	    <p class="first">
+	    ¿Cuál es un buen indicador de buen diseño? El movimiento. La historia de una exitosa pieza de diseño empieza con el movimiento de su creador mientras se está haciendo, y se amplifica con su publicación, moviendo la obra hacia fuera. Continúa entonces en la sensación que la obra causa en la audiencia cuando la ven, usan, or contribuyen a la misma, lo cual intensifica esta sensación según la audiencia lo va pasando a otros. El diseño gana valor al cambiar de mano, de contexto o de necesidad. 
+	    Si todo este movimiento armoniza, la obra gana vida propia, y se vuelve una experiencia compartida que mejora la vida y acerca al mundo a su mayor potencial.</p>
+	    <p>
+	    El diseñador está encargado de organizar y dirigir este movimiento libremente. Ella es la quien trabaja para asegurar que el movimiento está apuntando en la dirección que nos lleva al futuro deseado. Marshall McLuhan dijo que, “miramos al presente a través de un retrovisor” y que “marchamos para atrás hacia el futuro”. La inventiva es nuestra lente para imaginar lo que es posible, y el diseño es el camino que seguimos para conseguirlo. 
+	    Pero la visión de McLuhan tiene una pega, porque marchar no es manera de ir al futuro. Es demasiado metódico y restringido. A menudo, el mundo subvierte nuestros mejores planes, por lo que nuestros caminos piden un acercamiento más desordenado, bruto y sensible. La luz y diversión derivadas de la creatividad sugieren que bailemos.</p>
+	    <p>
+	    Para bailar hace falta música, y cada uno tiene su canción. Estas canciones son la culminación de nuestras disposiciones individuales. Es un producto de nuestras líneas de trabajo, y una demostración de la lente que usamos para ver el mundo. La primera composición de este libro trata sobre estos movimientos internos. Cada uno de nosotros tenemos nuestro propio tema, y si sabemos escucharnos, la canción que suena está compuesta de las preguntas que preguntamos mientras trabajamos, los métodos que elegimos adaptar, los cuales nos obligan a hacer cosas, y sentirnos obligados a hacerlo en una manera específica para nosotros.</p>
+	    <p>
+	    La segunda parte de este libro analiza el medio del diseño: el context cultural del trabajo que creamos, las partes involucradas en el proceso, las relaciones entre estos grupos y los resultados inesperados de los esfuerzos del diseñador. El diseño tiende a vivir entre cosas que lo conectan, así que analiza esto en detalle para encontrar patrones. Mira el peso del valor de la ficción, la mutabilidad de los artefactos y la mutiplicidad de las respuestas disponibles en el diseño. El propósito de todos estos encargos es mirar al espacio alrededor del diseño para identificar las partes móviles, de modo que uno pueda empezar a pensar cómo influir este movimiento y responder en consecuencia al cambio de las cosas.</p>
+	    <p>
+	    La última parte de este libro se centra en la primacía de la audiencia en el diseño. Evalúa los métodos para crear conexiones más significativas con ellos para desbloquear la gran oportunidad de esta disposición fortuita. ¿Qué se puede conseguir si hablamos honestamente con la audiencia de nuestra obra? Quizá esto cambie las exitosas métricas del diseño para usar cualidades más suaves y significativas, como entusiasmo, compromiso y resonancia. Remarcar la práctica como algo más que comercio y solución de problemas nos permite centrarnos en temas fundamentales como utilidad. Requiere que alcemos preguntas simples pero difíciles sobre nuestro trabajo, como: “¿Nos ayuda esto a vivir bien?”</p>
+	    <p>
+	    <em>La forma del diseño</em> es un mapa del camino donde bailamos en vez de un plano del mismo. Se esfuerza en investigar las oportunidades de explorar el terreno, y valora dar un paso atrás en cuanto a las preocupaciones diarias de diseñar. Intenta imponer una distancia significativa para encontrar patrones en el trabajo y evalúa la práctica como entero. Uno puede observar, desde esta distancia, dos cosas muy fundamentales del diseño muy fáciles de perder en la niebla de todo este movimiento.</p>
+	    <p>
+	    Primero, el diseño es imaginar un futuro y trabajar para alcanzarlo con inteligencia y astucia. Usamos diseño para estrechar el hueco entre la situación en la que estamos y la que deseamos estar. Segundo, el diseño es una práctica basada en el hacer cosas para otras personas. Todos estamos juntos en el camino. Estas dos cosas dictan nuestra relación con el mundo y nuestro lazo con los demás. Forman las bases de la práctica del diseño, donde el diseño debe revolverse entre estas verdades.</p>
+	    <p>
+	    La práctica es, simplemente, una manera de pensar y moverse que usamos para mejorar la vida. Está disponible para cualquiera. Escuchamos nuestra canción, vemos cómo se mueven las cosas, imaginamos su organización y entonces actuamos. Bailamos juntos marcha atrás hacia el futuro, dando y tomando influencia, formando y siendo formados. Esta es la danca de la eternidad, y la forma del diseño. Espero verte cantando en el camino.</p>
 		
-		<a href="chapter01.html" class="continue">Continue to Chapter One</a>
-	</article>
+		<a href="chapter01.html" class="continue">Continuar en Capítulo 1</a>
+	</article>	
 	
 	<footer>
-		Licensed  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">BY-NC-SA Creative Commons.</a><br>
-		Thanks to <a href="http://shapeofdesignbook.com/kickstarter/">the Kickstarter backers.</a>
+		Traducción por  <a href="http://jaicab.com">Jaime Caballero</a><br>
+		Licencia  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">BY-NC-SA Creative Commons.</a><br>
+		Gracias a <a href="http://shapeofdesignbook.com/kickstarter/">el apoyo en Kickstarter.</a>
 	</footer>
 </body>
-</html>
