--- a/introduction.html
+++ b/introduction.html
@@ -12,7 +12,7 @@
 
 <body>
 	<header>
-		<h1>La forma del dise&ntilde;o por <a href="http://frankchimero.com">Frank Chimero</a></h1><br>
+		<h1>La forma del dise&ntilde;o por Frank Chimero</h1><br>
 		<a href="https://github.com/jaicab/the-shape-of-design-spanish">En GitHub</a></h1>
 	</header>
 	
@@ -58,7 +58,7 @@
 	    <p>
 	    Primero, el diseño es imaginar un futuro y trabajar para alcanzarlo con inteligencia y astucia. Usamos diseño para estrechar el hueco entre la situación en la que estamos y la que deseamos estar. Segundo, el diseño es una práctica basada en el hacer cosas para otras personas. Todos estamos juntos en el camino. Estas dos cosas dictan nuestra relación con el mundo y nuestro lazo con los demás. Forman las bases de la práctica del diseño, donde el diseño debe revolverse entre estas verdades.</p>
 	    <p>
-	    La práctica es, simplemente, una manera de pensar y moverse que usamos para mejorar la vida. Está disponible para cualquiera. Escuchamos nuestra canción, vemos cómo se mueven las cosas, imaginamos su organización y entonces actuamos. Bailamos juntos marcha atrás hacia el futuro, dando y tomando influencia, formando y siendo formados. Esta es la danca de la eternidad, y la forma del diseño. Espero verte cantando en el camino.</p>
+	    La práctica es, simplemente, una manera de pensar y moverse que usamos para mejorar la vida. Está disponible para cualquiera. Escuchamos nuestra canción, vemos cómo se mueven las cosas, imaginamos su organización y entonces actuamos. Bailamos juntos marcha atrás hacia el futuro, dando y tomando influencia, formando y siendo formados. Este es el baile de la eternidad, y la forma del diseño. Espero verte cantando en el camino.</p>
 		
 		<a href="chapter01.html" class="continue">Continuar en Capítulo 1</a>
 	</article>	
