--- a/introduction.html
+++ b/introduction.html
@@ -18,8 +18,8 @@
 	
 	<nav>
 		<ol>
-			<li><a href="index.html" class="tooltip">•<span>Prólogo</span></a></li>
-		    <li class="sep"><a href="introduction.html" class="active tooltip">◦<span>Introducción</span></a></li>
+			<li><a href="index.html" class="tooltip">◦<span>Prólogo</span></a></li>
+		    <li class="sep"><a href="introduction.html" class="active tooltip">•<span>Introducción</span></a></li>
 		
 		    <li><a href="chapter01.html" class="tooltip">◦<span>1&nbsp;&middot;&nbsp;C&oacute;mo&nbsp;y&nbsp;Por&nbsp;qu&eacute;</span></a></li>
 		    <li><a href="chapter02.html" class="tooltip">◦<span>2&nbsp;&middot;&nbsp;Artesan&iacute;a&nbsp;y&nbsp;Belleza</span></a></li>
